# app/Models/Cliente.php
@@ -2,10 +2,15 @@
 
 namespace App\Models;
 
+use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 
 class Cliente extends Model
 {
+    use HasFactory;
+
+    protected $table = 'clientes';
+
     protected $fillable = [
         'nombre',
         'apellido',
