# routes/api.php
@@ -14,9 +14,13 @@ Route::get('/user', function (Request $request) {
     return $request->user();
 });
 
-// CRUD CLIENTES
-Route::get('/clientes', [ClienteController::class, 'index']);
-Route::post('/clientes', [ClienteController::class, 'store']);
-Route::get('/clientes/{id}', [ClienteController::class, 'show']);
-Route::put('/clientes/{id}', [ClienteController::class, 'update']);
-Route::delete('/clientes/{id}', [ClienteController::class, 'destroy']);
+// CRUD CLIENTES CON RATE LIMITING
+Route::middleware('throttle:60,1')->group(function () {
+
+    Route::get('/clientes', [ClienteController::class, 'index']);
+    Route::post('/clientes', [ClienteController::class, 'store']);
+    Route::get('/clientes/{id}', [ClienteController::class, 'show']);
+    Route::put('/clientes/{id}', [ClienteController::class, 'update']);
+    Route::delete('/clientes/{id}', [ClienteController::class, 'destroy']);
+
+});
